<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_post_task"
        android:icon="@drawable/ic_post_task"
        android:title="@string/post_a_task"/>

    <item
        android:id="@+id/navigation_my_task"
        android:icon="@drawable/ic_my_task"
        android:title="@string/my_tasks" />

    <item
        android:id="@+id/navigation_browse"
        android:icon="@drawable/ic_search"
        android:title="@string/browse" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_mail"
        android:title="@string/messages" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_users"
        android:title="@string/profile" />

</menu>
