<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="467dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/task_title"
                        android:textSize="19sp" />

                    <TextView
                        android:id="@+id/tvTitleLength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:text="@string/minimun_10_char"
                        android:textSize="13sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/task_description"
                        android:textSize="19sp" />


                    <TextView
                        android:id="@+id/tvDescriptionLength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/minimum_25_char"
                        android:textAlignment="textEnd"
                        android:textSize="13sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="136dp"
                    android:ems="10"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/switchTaskType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Можно ли выполнить задание онлайн?"
                    android:textColor="@color/colorH2"
                    android:textSize="19sp"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/task_location"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_rounded_button_background"
                android:text="@string/btn_continue"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>


